test/classes/initializers/errors/lhsInitRhsCons.good
lhsInitRhsCons.chpl:18: error: type mismatch between 'hasInit' and 'hasConstruct'
